--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-curl": "^2.2.0",
+    "handlebars-helper-compose": "^0.2.12",
     "handlebars-helper-rel": "^0.1.2",
     "iso-3166-2": "^0.2.1",
     "mocha": "^2.3.3",
